test/spec_vectors/loop/fail/module_21.wat
(module (func $type-value-void-vs-num (result i32) (loop (result i32) (nop))))